--- a/course/component/index.html
+++ b/course/component/index.html
@@ -1,51 +1,54 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Components</title>
-  <script src="../build/JSXTransformer.js"></script>
-  <script src="../build/react.js"></script>
+<html>
 
-</head>
-<body>
-  <div id="ejemplo"></div>
-  <div id="ejemplo2"></div>
-  <div id="ejemplo3"></div>
-  <div id="ejemplo4"></div>
-  <script type="text/jsx">
-    var Componente = React.createClass({
-      render: function(){
-        return (<h1>T&iacute;tulo</h1>);
-      }
+  <head>
+
+    <script src="http://fb.me/react-with-addons-0.12.0.js"></script>
+    <script src="http://fb.me/JSXTransformer-0.12.0.js"></script>
+
+  </head>
+
+  <body>
+
+    <div id="ejemplo"></div>
+    <div id="ejemplo2"></div>
+    <div id="ejemplo3"></div>
+    <div id="ejemplo4"></div>
+
+    <script type="text/jsx">
+
+     var Componente = React.createClass({
+          render:function(){
+            return (<h1>T&iacute;tulo</h1>);
+          }
+     });
+     var Componente2 = React.createClass({
+          render:function(){
+            return (<div>Segundo Componente</div>);
+          }
     });
+     var Componente3 = React.createClass({
+        render:function(){
+          return React.DOM.div({children:[React.DOM.span({children:"Ejemplo 3"}),React.DOM.span({children:"El mismo ejemplo 3"})]})
+        }
 
-    var Componente2 = React.createClass({
-      render: function(){
-        return (<div>Componente Dos</div>);
-      }
-    });
-
-    var Componente3 = React.createClass({
-      render: function(){
-        return React.DOM.div({children:[React.DOM.span({children:"Ejemplo 3"}),React.DOM.span({children:"El mismo ejemplo 3"})]})
-        })]})
-      }
-    });
-
-    var Componente4 = React.createClass({
-      render: function(){
+     });
+    var Componente4= React.createClass({
+      render:function(){
         return React.DOM.div({
-          children: "Este es el ejemplo 4"
+            children:"Este es el ejemplo 4"
+
         })
+
+
       }
-    });
 
-    React.renderComponent(<Componente/>, document.getElemenyById('ejemplo'));
-    React.renderComponent(<Componente2/>, document.getElemenyById('ejemplo2'));
-    React.renderComponent(Componente3, document.getElemenyById('ejemplo3'));
-    React.renderComponent(Componente4, document.getElemenyById('ejemplo4'));
-
+    })
+  React.renderComponent(<Componente/>,document.getElementById('ejemplo'));
+  React.renderComponent(<Componente2/>,document.getElementById('ejemplo2'));
+  React.renderComponent(Componente3({}),document.getElementById('ejemplo3'));
+  React.renderComponent(Componente4({}),document.getElementById('ejemplo4'));
 
   </script>
-</body>
+  </body>
 </html>
